plugins {
    id 'application'
    id 'maven-publish'
    id 'aether-protocol' version '1.0.0'
}
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}
application {
    mainClass = 'io.aether.example.smarthome.plain.SmartHomePlainApp'

    applicationDefaultJvmArgs = [
            '--enable-native-access=ALL-UNNAMED'
    ]

}
publishing {
    publications {
        mavenPublication(MavenPublication){
            from components.java
            groupId "io.aether"
            artifactId "example-smart-home-plain"
        }
    }
}
dependencies {
    implementation project(':client')
    implementation 'io.aether.crypto:hydrogen-fast:+'
    implementation 'io.aether.crypto:sodium:+'
    implementation 'io.aether:net-netty:+'
}